# euca-engine

./: .eucaproject.json  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  GUIDE.md  LICENSE  LICENSE-APACHE  README.md  REVIEW.md  ROADMAP.md  SKILL.md  SLIDES.md  TECH_REPORT.md  benchmark_results.csv  level.json  run_dota.sh
crates/euca-agent/: Cargo.toml  README.md
crates/euca-agent/src/: auth.rs  bridge.rs  control.rs  hud.rs  lib.rs  routes.rs  server.rs  state.rs
crates/euca-agent/tests/: api_integration.rs
crates/euca-ai/: Cargo.toml  README.md
crates/euca-ai/src/: blackboard.rs  builder.rs  executor.rs  lib.rs  node.rs  system.rs
crates/euca-animation/: Cargo.toml  README.md
crates/euca-animation/benches/: animation_bench.rs
crates/euca-animation/src/: blend.rs  blend_space.rs  clip.rs  event.rs  ik.rs  lib.rs  montage.rs  root_motion.rs  state_machine.rs  system.rs  systems.rs
crates/euca-asset/: Cargo.toml  README.md
crates/euca-asset/src/: animation.rs  cooked.rs  gltf_loader.rs  hot_reload.rs  lib.rs  loader.rs  lod.rs  mesh_opt.rs  skeleton.rs  systems.rs
crates/euca-asset/tests/: ai_gen_integration.rs
crates/euca-audio/: Cargo.toml  README.md
crates/euca-audio/src/: engine.rs  lib.rs  reverb.rs  source.rs  systems.rs
crates/euca-core/: Cargo.toml  README.md
crates/euca-core/src/: app.rs  lib.rs  platform.rs  plugin.rs  profiler.rs  time.rs
crates/euca-ecs/: Cargo.toml  README.md
crates/euca-ecs/benches/: ecs_bench.rs
crates/euca-ecs/src/: archetype.rs  command.rs  component.rs  entity.rs  event.rs  lib.rs  lock_util.rs  query.rs  resource.rs  schedule.rs  shared.rs  snapshot.rs  sparse.rs  system.rs  system_param.rs  world.rs
crates/euca-editor/: Cargo.toml  README.md
crates/euca-editor/src/: gizmo.rs  lib.rs  panels.rs  scene_file.rs  undo.rs
crates/euca-game/: Cargo.toml  README.md
crates/euca-game/benches/: engine_bench.rs
crates/euca-game/src/: arena.rs  lib.rs  main.rs  project.rs
crates/euca-gameplay/: Cargo.toml  README.md
crates/euca-gameplay/src/: abilities.rs  ai.rs  assertions.rs  attributes.rs  bt_actions.rs  bt_perception.rs  building.rs  building_systems.rs  camera.rs  cleanup.rs  combat.rs  combat_math.rs  creep_wave.rs  crowd_control.rs  data_table.rs  economy.rs  fog_of_war.rs  game_state.rs  health.rs  hero.rs  inventory.rs  item_active.rs  leveling.rs  lib.rs  neutral_camp.rs  player.rs  player_input.rs  replay.rs  roshan.rs  rules.rs  shop.rs  stats.rs  status_effects.rs  teams.rs  tilemap.rs  tower_aggro.rs  triggers.rs  turns.rs  visibility.rs  zones.rs
crates/euca-gameplay/tests/: integration.rs
crates/euca-input/: Cargo.toml  README.md
crates/euca-input/src/: lib.rs
crates/euca-math/: Cargo.toml  README.md
crates/euca-math/benches/: math_bench.rs
crates/euca-math/src/: aabb.rs  lib.rs  mat.rs  quat.rs  reflect_impls.rs  simd.rs  transform.rs  vec.rs
crates/euca-moba/: Cargo.toml
crates/euca-moba/src/: attributes.rs  building.rs  building_systems.rs  creep_wave.rs  hero.rs  lib.rs  neutral_camp.rs  roshan.rs  shop.rs  tower_aggro.rs
crates/euca-nav/: Cargo.toml  README.md
crates/euca-nav/src/: level_nav.rs  lib.rs  navmesh.rs  pathfinding.rs  rvo.rs  steering.rs
crates/euca-net/: Cargo.toml  README.md
crates/euca-net/benches/: net_bench.rs
crates/euca-net/src/: bandwidth.rs  client.rs  interest.rs  lib.rs  prediction.rs  protocol.rs  quic_transport.rs  replication.rs  server.rs  tick_rate.rs  transport.rs  ws_transport.rs
crates/euca-particle/: Cargo.toml  README.md
crates/euca-particle/src/: lib.rs  render.rs
crates/euca-physics/: Cargo.toml  README.md
crates/euca-physics/benches/: physics_bench.rs
crates/euca-physics/src/: character.rs  collision.rs  components.rs  frame_cache.rs  gpu_broadphase.rs  joints.rs  lib.rs  raycast.rs  systems.rs  vehicle.rs  world.rs
crates/euca-reflect/: Cargo.toml  README.md
crates/euca-reflect-derive/: Cargo.toml  README.md
crates/euca-reflect-derive/src/: lib.rs
crates/euca-reflect/src/: lib.rs
crates/euca-render/: Cargo.toml  README.md
crates/euca-render/benches/: render_bench.rs
crates/euca-render/shaders/: brdf_lut.wgsl  deferred_lighting.wgsl  dof.wgsl  foliage_cull.wgsl  frustum_cull.wgsl  fullscreen_vs.wgsl  gbuffer.wgsl  gpu_cull.wgsl  ibl_irradiance.wgsl  ibl_specular.wgsl  light_assign.wgsl  meshlet_cull.wgsl  motion_blur.wgsl  particle_compute.wgsl  particle_render.wgsl  pbr.wgsl  pbr_bindless.wgsl  postprocess.wgsl  pp_uniforms.wgsl  prepass.wgsl  shadow.wgsl  sky.wgsl  ssgi.wgsl  ssr.wgsl  ssr_composite.wgsl  ssr_normals.wgsl  taa_resolve.wgsl  ui_quad.wgsl  velocity.wgsl  volumetric_fog.wgsl  water.wgsl
crates/euca-render/src/: bindless.rs  buffer.rs  camera.rs  clustered.rs  compute.rs  creep_meshes.rs  decal.rs  deferred.rs  dof.rs  extract.rs  foliage.rs  frame_graph.rs  geometry_pool.rs  gpu.rs  gpu_driven.rs  gpu_particles.rs  hardware.rs  hlod.rs  ibl.rs  lib.rs  light.rs  light_probe.rs  lod.rs  material.rs  mesh.rs  meshlet.rs  metal_hints.rs  motion_blur.rs  occlusion.rs  plugin.rs  post_process.rs  prepass.rs  renderer.rs  ssgi.rs  ssr.rs  taa.rs  texture.rs  ui_overlay.rs  velocity.rs  vertex.rs  (+1 more)
crates/euca-render/tests/: shader_validation.rs
crates/euca-rhi/: Cargo.toml
crates/euca-rhi/src/: lib.rs  metal_backend.rs  pass.rs  types.rs  wgpu_backend.rs
crates/euca-rhi/tests/: metal_smoke.rs
crates/euca-scene/: Cargo.toml  README.md
crates/euca-scene/src/: hierarchy.rs  level.rs  lib.rs  prefab.rs  spatial.rs  streaming.rs  transform.rs
crates/euca-script/: Cargo.toml  README.md
crates/euca-script/src/: ecs_api.rs  engine.rs  events.rs  lib.rs  watcher.rs
crates/euca-services/: Cargo.toml
crates/euca-services/src/: auth.rs  error.rs  http.rs  lib.rs  realtime.rs  session.rs
crates/euca-terrain/: Cargo.toml  README.md
crates/euca-terrain/shaders/: terrain_gen.wgsl
crates/euca-terrain/src/: chunk.rs  editing.rs  (+14 more)
crates/euca-ui/: Cargo.toml  README.md
crates/euca-web/: Cargo.toml
examples/web_hello/: Cargo.toml  index.html
games/poker/: Cargo.toml
(+136 files in other folders)
