[workspace]
resolver = "2"
members = [
    "crates/euca-ecs",
    "crates/euca-reflect",
    "crates/euca-reflect-derive",
    "crates/euca-math",
    "crates/euca-scene",
    "crates/euca-core",
    "crates/euca-render",
    "crates/euca-agent",
    "crates/euca-physics",
    "crates/euca-asset",
    "crates/euca-editor",
    "crates/euca-input",
    "tools/euca-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
