[workspace]
resolver = "2"
members = [
    "crates/euca-ecs",
    "crates/euca-reflect",
    "crates/euca-reflect-derive",
    "crates/euca-math",
    "crates/euca-scene",
    "crates/euca-core",
    "crates/euca-render",
    "crates/euca-agent",
    "crates/euca-physics",
    "crates/euca-asset",
    "crates/euca-animation",
    "crates/euca-editor",
    "crates/euca-input",
    "crates/euca-net",
    "crates/euca-game",
    "crates/euca-gameplay",
    "crates/euca-audio",
    "crates/euca-particle",
    "crates/euca-nav",
    "crates/euca-ai",
    "crates/euca-ui",
    "crates/euca-terrain",
    "crates/euca-script",
    "tools/euca-cli",
]

[workspace.package]
version = "0.5.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/stainlu/euca-engine"
homepage = "https://github.com/stainlu/euca-engine"
