[package]
name = "euca-agent"
version.workspace = true
edition.workspace = true

[dependencies]
euca-ecs = { path = "../euca-ecs" }
euca-math = { path = "../euca-math" }
euca-scene = { path = "../euca-scene" }
euca-physics = { path = "../euca-physics" }
euca-net = { path = "../euca-net" }
euca-input = { path = "../euca-input" }
euca-render = { path = "../euca-render" }
euca-gameplay = { path = "../euca-gameplay" }
tokio = { version = "1", features = ["full"] }
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
ed25519-dalek = { version = "2", features = ["std"] }
base64 = "0.22"
rand = "0.8"

[[example]]
name = "headless_server"
path = "../../examples/headless_server.rs"

[[example]]
name = "agent_game"
path = "../../examples/agent_game.rs"

[[example]]
name = "agent_client"
path = "../../examples/agent_client.rs"

[dev-dependencies]
env_logger = "0.11"
bincode = "1"
reqwest = { version = "0.12", features = ["json", "blocking"] }
euca-game = { path = "../euca-game" }
