[package]
name = "euca-asset"
version.workspace = true
edition.workspace = true

[dependencies]
euca-ecs = { path = "../euca-ecs" }
euca-math = { path = "../euca-math" }
euca-render = { path = "../euca-render" }
gltf = "1.4"
log = "0.4"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
env_logger = "0.11"
euca-ecs = { path = "../euca-ecs" }
euca-math = { path = "../euca-math" }
euca-scene = { path = "../euca-scene" }
euca-core = { path = "../euca-core" }
winit = "0.30"

[[example]]
name = "gltf_viewer"
path = "../../examples/gltf_viewer.rs"
