[package]
name = "euca-asset"
version.workspace = true
edition.workspace = true
description = "glTF loading, LOD generation, mesh optimization, and hot-reload"
keywords = ["gamedev", "game-engine", "gltf", "asset", "mesh"]
categories = ["game-development"]

[dependencies]
euca-ecs = { path = "../euca-ecs" }
euca-math = { path = "../euca-math" }
euca-render = { path = "../euca-render" }
gltf = "1.4"
log = "0.4"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
env_logger = "0.11"
euca-ecs = { path = "../euca-ecs" }
euca-math = { path = "../euca-math" }
euca-scene = { path = "../euca-scene" }
euca-core = { path = "../euca-core" }
winit = "0.30"

[[example]]
name = "gltf_viewer"
path = "../../examples/gltf_viewer.rs"
