[package]
name = "euca-audio"
version.workspace = true
edition.workspace = true
description = "Spatial audio with bus mixing, reverb zones, and occlusion via kira"
keywords = ["gamedev", "game-engine", "audio", "spatial-audio", "kira"]
categories = ["game-development", "multimedia::audio"]

[dependencies]
euca-ecs = { path = "../euca-ecs" }
euca-math = { path = "../euca-math" }
euca-scene = { path = "../euca-scene" }
kira = "0.12"
log = "0.4"
serde = { version = "1", features = ["derive"] }
