[package]
name = "euca-core"
version.workspace = true
edition.workspace = true
description = "App lifecycle, Plugin trait, and Time resource for game engines"
keywords = ["gamedev", "game-engine", "core", "plugin", "lifecycle"]
categories = ["game-development"]

[dependencies]
euca-ecs = { path = "../euca-ecs" }
euca-math = { path = "../euca-math" }
winit = "0.30"
log = "0.4"
env_logger = "0.11"
