[package]
name = "euca-ecs"
version.workspace = true
edition.workspace = true

[dependencies]
euca-math = { path = "../euca-math" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"
rayon = "1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "ecs_bench"
harness = false
path = "../../benches/ecs_bench.rs"
