[package]
name = "euca-ecs"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Archetype-based ECS with generational entities, type-safe queries, change detection, and parallel iteration"
keywords = ["ecs", "gamedev", "archetype", "entity", "component"]
categories = ["game-development", "data-structures"]

[dependencies]
euca-math = { version = "0.1", path = "../euca-math" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"
rayon = "1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "ecs_bench"
harness = false
path = "../../benches/ecs_bench.rs"
