[package]
name = "euca-editor"
version.workspace = true
edition.workspace = true

[dependencies]
euca-ecs = { path = "../euca-ecs" }
euca-math = { path = "../euca-math" }
euca-reflect = { path = "../euca-reflect" }
euca-scene = { path = "../euca-scene" }
euca-core = { path = "../euca-core" }
euca-render = { path = "../euca-render" }
euca-physics = { path = "../euca-physics" }
egui = "0.33"
egui-wgpu = "0.33"
egui-winit = "0.33"
winit = "0.30"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
wgpu = "27"
pollster = "0.4"

[dev-dependencies]
env_logger = "0.11"
euca-agent = { path = "../euca-agent" }
tokio = { version = "1", features = ["full"] }

[[example]]
name = "editor"
path = "../../examples/editor.rs"
