[package]
name = "euca-game"
version.workspace = true
edition.workspace = true
description = "Standalone game runner with .eucaproject.json configuration"
keywords = ["gamedev", "game-engine", "runtime", "game-runner"]
categories = ["game-development"]

[dependencies]
euca-ecs = { path = "../euca-ecs" }
euca-math = { path = "../euca-math" }
euca-scene = { path = "../euca-scene" }
euca-physics = { path = "../euca-physics" }
euca-render = { path = "../euca-render" }
euca-net = { path = "../euca-net" }
euca-input = { path = "../euca-input" }
euca-core = { path = "../euca-core" }
euca-gameplay = { path = "../euca-gameplay" }
euca-agent = { path = "../euca-agent" }
euca-audio = { path = "../euca-audio" }
euca-nav = { path = "../euca-nav" }
euca-asset = { path = "../euca-asset" }
euca-particle = { path = "../euca-particle" }
winit = "0.30"
wgpu = "27"
log = "0.4"
env_logger = "0.11"
bincode = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pollster = "0.4"
tokio = { version = "1", features = ["rt-multi-thread", "net"] }

[[bin]]
name = "euca-game"
path = "src/main.rs"

[[example]]
name = "server"
path = "../../examples/server.rs"

[[example]]
name = "client"
path = "../../examples/client.rs"
