[package]
name = "euca-game"
version.workspace = true
edition.workspace = true
description = "Standalone game runner with .eucaproject.json configuration"
keywords = ["gamedev", "game-engine", "runtime", "game-runner"]
categories = ["game-development"]

[features]
default = []
metal-native = ["euca-render/metal-native"]

[dependencies]
euca-ecs = { path = "../euca-ecs" }
euca-math = { path = "../euca-math" }
euca-scene = { path = "../euca-scene" }
euca-physics = { path = "../euca-physics" }
euca-render = { path = "../euca-render" }
euca-net = { path = "../euca-net" }
euca-input = { path = "../euca-input" }
euca-core = { path = "../euca-core" }
euca-gameplay = { path = "../euca-gameplay" }
euca-ai = { path = "../euca-ai" }
euca-agent = { path = "../euca-agent" }
euca-audio = { path = "../euca-audio" }
euca-animation = { path = "../euca-animation" }
euca-nav = { path = "../euca-nav" }
euca-asset = { path = "../euca-asset" }
euca-terrain = { path = "../euca-terrain", features = ["level-render"] }
euca-particle = { path = "../euca-particle" }
euca-ui = { path = "../euca-ui" }
euca-script = { path = "../euca-script" }
winit = "0.30"
wgpu = "27"
log = "0.4"
env_logger = "0.11"
bincode = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pollster = "0.4"
tokio = { version = "1", features = ["rt-multi-thread", "net"] }
mimalloc = "0.1"

[[bin]]
name = "euca-game"
path = "src/main.rs"

[[example]]
name = "server"
path = "../../examples/server.rs"

[[example]]
name = "client"
path = "../../examples/client.rs"

[[example]]
name = "dota_client"
path = "../../examples/dota_client.rs"

[[example]]
name = "tiled_level"
path = "../../examples/tiled_level.rs"

[[example]]
name = "gpu_benchmark"
path = "../../examples/gpu_benchmark.rs"

[[example]]
name = "particle_demo"
path = "../../examples/particle_demo.rs"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "engine_bench"
harness = false
