[package]
name = "euca-gameplay"
version.workspace = true
edition.workspace = true

[dependencies]
euca-ecs = { path = "../euca-ecs" }
euca-input = { path = "../euca-input" }
euca-math = { path = "../euca-math" }
euca-physics = { path = "../euca-physics" }
euca-render = { path = "../euca-render" }
euca-scene = { path = "../euca-scene" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
