[package]
name = "euca-gameplay"
version.workspace = true
edition.workspace = true
description = "Health, combat, economy, abilities, rules engine, and AI behaviors"
keywords = ["gamedev", "game-engine", "gameplay", "combat", "abilities"]
categories = ["game-development"]

[dependencies]
euca-core = { path = "../euca-core" }
euca-ecs = { path = "../euca-ecs" }
euca-input = { path = "../euca-input" }
euca-math = { path = "../euca-math" }
euca-physics = { path = "../euca-physics" }
euca-reflect = { path = "../euca-reflect" }
euca-render = { path = "../euca-render" }
euca-scene = { path = "../euca-scene" }
euca-ai = { path = "../euca-ai" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"
log = "0.4"
