[package]
name = "euca-input"
version.workspace = true
edition.workspace = true
description = "Action maps, input contexts, and keyboard/gamepad bindings"
keywords = ["gamedev", "game-engine", "input", "keyboard", "gamepad"]
categories = ["game-development"]

[dependencies]
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
