[package]
name = "euca-moba"
version.workspace = true
edition.workspace = true
description = "MOBA genre kit — heroes, buildings, creeps, shops, Roshan"
keywords = ["gamedev", "game-engine", "moba", "dota"]
categories = ["game-development"]

[dependencies]
euca-gameplay = { path = "../euca-gameplay" }
euca-ecs = { path = "../euca-ecs" }
euca-math = { path = "../euca-math" }
euca-physics = { path = "../euca-physics" }
euca-render = { path = "../euca-render" }
euca-scene = { path = "../euca-scene" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
