[package]
name = "euca-nav"
version.workspace = true
edition.workspace = true
description = "Grid navmesh, A* pathfinding, path smoothing, and RVO avoidance"
keywords = ["gamedev", "game-engine", "navigation", "pathfinding", "navmesh"]
categories = ["game-development"]

[dependencies]
euca-ecs = { path = "../euca-ecs" }
euca-math = { path = "../euca-math" }
euca-scene = { path = "../euca-scene" }
euca-physics = { path = "../euca-physics" }
log = "0.4"
serde = { version = "1", features = ["derive"] }
