[package]
name = "euca-net"
version.workspace = true
edition.workspace = true
description = "UDP/QUIC transport, property replication, and client prediction"
keywords = ["gamedev", "game-engine", "networking", "quic", "multiplayer"]
categories = ["game-development", "network-programming"]

[dependencies]
euca-ecs = { path = "../euca-ecs" }
euca-math = { path = "../euca-math" }
euca-scene = { path = "../euca-scene" }
euca-input = { path = "../euca-input" }
serde = { version = "1", features = ["derive"] }
bincode = "1"
log = "0.4"
quinn = "0.11"
rustls = { version = "0.23", features = ["ring"] }
rcgen = "0.13"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "net", "sync"] }
