[package]
name = "euca-net"
version.workspace = true
edition.workspace = true
description = "UDP/QUIC transport, property replication, and client prediction"
keywords = ["gamedev", "game-engine", "networking", "quic", "multiplayer"]
categories = ["game-development", "network-programming"]

[features]
default = ["udp", "quic"]
udp = []
quic = []
websocket = ["tokio-tungstenite", "futures-util", "thiserror"]

[dependencies]
euca-ecs = { path = "../euca-ecs" }
euca-math = { path = "../euca-math" }
euca-scene = { path = "../euca-scene" }
euca-input = { path = "../euca-input" }
serde = { version = "1", features = ["derive"] }
bincode = "1"
log = "0.4"
bytes = "1"
quinn = "0.11"
rustls = { version = "0.23", features = ["ring"] }
rcgen = "0.13"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "net", "sync", "time", "macros"] }
tokio-tungstenite = { version = "0.24", optional = true }
futures-util = { version = "0.3", optional = true }
thiserror = { version = "2", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
bincode = "1"

[[bench]]
name = "net_bench"
harness = false
