[package]
name = "euca-particle"
version.workspace = true
edition.workspace = true
description = "CPU + GPU compute particle systems with billboard rendering"
keywords = ["gamedev", "game-engine", "particles", "vfx", "compute"]
categories = ["game-development", "rendering"]

[dependencies]
euca-ecs = { path = "../euca-ecs" }
euca-math = { path = "../euca-math" }
euca-scene = { path = "../euca-scene" }
log = "0.4"
serde = { version = "1", features = ["derive"] }
