[package]
name = "euca-physics"
version.workspace = true
edition.workspace = true
description = "Collision detection, raycasting, joints, and character/vehicle controllers"
keywords = ["gamedev", "game-engine", "physics", "collision", "raycasting"]
categories = ["game-development", "simulation"]

[dependencies]
euca-ecs = { path = "../euca-ecs" }
euca-math = { path = "../euca-math", features = ["reflect"] }
euca-reflect = { path = "../euca-reflect" }
euca-scene = { path = "../euca-scene" }
log = "0.4"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "physics_bench"
harness = false
