[package]
name = "euca-physics"
version.workspace = true
edition.workspace = true
description = "Collision detection, raycasting, joints, and character/vehicle controllers"
keywords = ["gamedev", "game-engine", "physics", "collision", "raycasting"]
categories = ["game-development", "simulation"]

[features]
default = []
gpu-broadphase = ["dep:euca-rhi", "dep:bytemuck"]

[dependencies]
euca-ecs = { path = "../euca-ecs" }
euca-math = { path = "../euca-math", features = ["reflect"] }
euca-reflect = { path = "../euca-reflect" }
euca-scene = { path = "../euca-scene" }
euca-rhi = { path = "../euca-rhi", optional = true }
bytemuck = { version = "1", features = ["derive"], optional = true }
log = "0.4"
rayon = "1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
euca-core = { path = "../euca-core" }
euca-render = { path = "../euca-render" }
env_logger = "0.11"
winit = "0.30"

[[bench]]
name = "physics_bench"
harness = false

[[example]]
name = "stress_test"
path = "../../examples/stress_test.rs"
