[package]
name = "euca-reflect"
version.workspace = true
edition.workspace = true
description = "Runtime reflection with field access, TypeRegistry, and JSON serialization"
keywords = ["gamedev", "game-engine", "reflection", "type-registry", "serialization"]
categories = ["game-development", "rust-patterns"]

[dependencies]
euca-reflect-derive = { path = "../euca-reflect-derive" }
serde_json = { version = "1", optional = true }

[features]
default = []
json = ["dep:serde_json"]
