[package]
name = "euca-render"
version.workspace = true
edition.workspace = true

[dependencies]
euca-ecs = { path = "../euca-ecs" }
euca-math = { path = "../euca-math" }
euca-scene = { path = "../euca-scene" }
euca-core = { path = "../euca-core" }
wgpu = "25"
winit = "0.30"
bytemuck = { version = "1", features = ["derive"] }
log = "0.4"
pollster = "0.4"

[dev-dependencies]
env_logger = "0.11"

[[example]]
name = "hello_cubes"
path = "../../examples/hello_cubes.rs"
