[package]
name = "euca-render"
version.workspace = true
edition.workspace = true
description = "wgpu PBR renderer with shadows, SSAO, SSR, volumetric fog, LOD, and compute shaders"
keywords = ["gamedev", "game-engine", "rendering", "wgpu", "pbr"]
categories = ["game-development", "rendering"]

[features]
default = []
metal-native = []  # Future: metal-rs, objc2 for native Metal rendering

[dependencies]
euca-ecs = { path = "../euca-ecs" }
euca-math = { path = "../euca-math", features = ["reflect"] }
euca-reflect = { path = "../euca-reflect" }
euca-scene = { path = "../euca-scene" }
euca-core = { path = "../euca-core" }
wgpu = "27"
winit = "0.30"
bytemuck = { version = "1", features = ["derive"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
log = "0.4"
pollster = "0.4"

[dev-dependencies]
env_logger = "0.11"
euca-physics = { path = "../euca-physics" }

[[example]]
name = "hello_cubes"
path = "../../examples/hello_cubes.rs"

[[example]]
name = "physics_demo"
path = "../../examples/physics_demo.rs"

[[example]]
name = "texture_demo"
path = "../../examples/texture_demo.rs"
