[package]
name = "euca-render"
version.workspace = true
edition.workspace = true
description = "RHI-generic PBR renderer (wgpu + native Metal backends) with Forward+, shadows, SSAO, SSR, volumetric fog, LOD, GPU-driven culling"
keywords = ["gamedev", "game-engine", "rendering", "wgpu", "metal", "pbr"]
categories = ["game-development", "rendering"]

[features]
default = []
metal-native = ["euca-rhi/metal-backend"]  # Native Metal rendering on Apple Silicon

[dependencies]
euca-ecs = { path = "../euca-ecs" }
euca-math = { path = "../euca-math", features = ["reflect"] }
euca-reflect = { path = "../euca-reflect" }
euca-scene = { path = "../euca-scene" }
euca-core = { path = "../euca-core" }
euca-rhi = { path = "../euca-rhi" }
wgpu = "27"
winit = "0.30"
bytemuck = { version = "1", features = ["derive"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
log = "0.4"
pollster = "0.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Window", "Document", "HtmlCanvasElement", "Element"] }
console_log = "0.2"
console_error_panic_hook = "0.1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
env_logger = "0.11"
euca-physics = { path = "../euca-physics" }
naga = { version = "27", features = ["wgsl-in"] }

[[bench]]
name = "render_bench"
harness = false

[[example]]
name = "hello_cubes"
path = "../../examples/hello_cubes.rs"

[[example]]
name = "physics_demo"
path = "../../examples/physics_demo.rs"

[[example]]
name = "texture_demo"
path = "../../examples/texture_demo.rs"

[[example]]
name = "metal_cubes"
path = "../../examples/metal_cubes.rs"
required-features = ["euca-rhi/metal-backend"]

[[example]]
name = "metal_stress"
path = "../../examples/metal_stress.rs"
required-features = ["euca-rhi/metal-backend"]

[[example]]
name = "metal_mesh_stress"
path = "../../examples/metal_mesh_stress.rs"
required-features = ["euca-rhi/metal-backend"]

[[example]]
name = "metal_fx_upscale"
path = "../../examples/metal_fx_upscale.rs"
required-features = ["euca-rhi/metal-backend"]

[[example]]
name = "metal_combined"
path = "../../examples/metal_combined.rs"
required-features = ["euca-rhi/metal-backend"]
