[package]
name = "euca-rhi"
version.workspace = true
edition.workspace = true
description = "Rendering Hardware Interface — backend-agnostic GPU trait abstraction"
keywords = ["gamedev", "game-engine", "rendering", "gpu", "rhi"]
categories = ["game-development", "rendering"]

[features]
default = ["wgpu-backend"]
wgpu-backend = ["dep:wgpu", "dep:winit"]
metal-backend = ["dep:objc2", "dep:block2", "dep:objc2-metal", "dep:objc2-foundation", "dep:objc2-quartz-core", "dep:winit", "dep:raw-window-handle"]

[dependencies]
wgpu = { version = "27", optional = true }
winit = { version = "0.30", optional = true }
raw-window-handle = { version = "0.6", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = { version = "0.6", optional = true }
block2 = { version = "0.6", optional = true }
objc2-metal = { version = "0.3", optional = true }
objc2-foundation = { version = "0.3", optional = true, features = ["NSError", "NSString"] }
objc2-quartz-core = { version = "0.3", optional = true, features = ["CAMetalLayer"] }
