[package]
name = "euca-services"
version.workspace = true
edition.workspace = true
description = "Service integration layer — traits for auth, HTTP, and real-time backends"
keywords = ["gamedev", "game-engine", "services", "auth", "http"]
categories = ["game-development", "web-programming"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

# Native HTTP client (optional, for default implementations)
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { version = "0.12", features = ["json"], optional = true }
tokio = { version = "1", features = ["rt"], optional = true }

# WASM HTTP client (optional)
[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = ["Window", "Request", "Response", "RequestInit", "Headers"], optional = true }
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
js-sys = { version = "0.3", optional = true }

[features]
default = []
native-http = ["reqwest", "tokio"]
wasm-http = ["web-sys", "wasm-bindgen", "wasm-bindgen-futures", "js-sys"]
