[package]
name = "euca-terrain"
version.workspace = true
edition.workspace = true
description = "Terrain and heightmap system with chunk LOD, texture splatting, and physics heightfield"
keywords = ["terrain", "heightmap", "gamedev", "lod", "splatting"]
categories = ["game-development"]

[features]
gpu-terrain = ["dep:euca-rhi", "dep:bytemuck"]
level-import = ["dep:image"]

[dependencies]
euca-ecs = { path = "../euca-ecs" }
euca-math = { path = "../euca-math" }
euca-physics = { path = "../euca-physics" }
euca-rhi = { path = "../euca-rhi", optional = true }
bytemuck = { version = "1", features = ["derive"], optional = true }
image = { version = "0.25", optional = true, default-features = false, features = ["png"] }
log = "0.4"
