[package]
name = "euca-terrain"
version.workspace = true
edition.workspace = true
description = "Terrain and heightmap system with chunk LOD, texture splatting, and physics heightfield"
keywords = ["terrain", "heightmap", "gamedev", "lod", "splatting"]
categories = ["game-development"]

[features]
gpu-terrain = ["dep:euca-rhi", "dep:bytemuck"]
level-import = ["dep:image"]
level-render = ["euca-render"]

[dependencies]
euca-ecs = { path = "../euca-ecs" }
euca-math = { path = "../euca-math" }
euca-physics = { path = "../euca-physics" }
euca-rhi = { path = "../euca-rhi", optional = true }
bytemuck = { version = "1", features = ["derive"], optional = true }
euca-render = { path = "../euca-render", optional = true }
image = { version = "0.25", default-features = false, features = ["png"], optional = true }
bincode = "1"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
